tests/typechecker/pass/307-tuple.hyg
let t: tuple {int, bool} = tuple {4, true};
assert(t._1 = 4)