tests/typechecker/fail/306-tuple.hyg
let t: tuple {int, bool} = tuple {true, 4};
assert(t._1 = true)